--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.2.1",
-    "@docusaurus/preset-classic": "^3.2.1",
-    "@docusaurus/theme-classic": "^3.2.1",
-    "@docusaurus/plugin-content-docs": "^3.2.1",
-    "@docusaurus/plugin-content-blog": "^3.2.1",
-    "@docusaurus/plugin-content-pages": "^3.2.1",
-    "@docusaurus/plugin-sitemap": "^3.2.1",
-    "@docusaurus/plugin-google-analytics": "^3.2.1",
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-classic": "3.7.0",
+    "@docusaurus/plugin-content-docs": "3.7.0",
+    "@docusaurus/plugin-content-blog": "3.7.0",
+    "@docusaurus/plugin-content-pages": "3.7.0",
+    "@docusaurus/plugin-sitemap": "3.7.0",
+    "@docusaurus/plugin-google-analytics": "3.7.0",
+    "@docusaurus/plugin-svgr": "3.7.0",
     "clsx": "^2.1.0",
     "infima": "^0.2.0-beta.49",
     "prism-react-renderer": "^2.0.5",
